Fixing scroll (no horizontal scroll)

--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -30,6 +30,7 @@ body {
 }
 
 #app{
+    overflow-x: hidden;
     max-width: 100%;
     padding: 0px;
     > .container{
